force-app/main/default/objects/Transport_Rate__mdt/Transport_Rate__mdt.object-meta.xml
<CustomObject>
    <description>Defines base transport pricing for each combination of Zone + Truck + Country + Effective Period. Contains base price, included kilometers, extra-km pricing, minimum price floor, and return discount percentage. Used by the engine at Steps 5–7. Supports currency specification and temporal versioning via effective dates.</description>
    <label>Transport Rate</label>
    <pluralLabel>Transport Rates</pluralLabel>
</CustomObject>