force-app/main/default/objects/Transport_Rate__mdt/fields/Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Price__c</fullName>
    <description>Starting price for the trip in the currency specified by Currency_Code__c. Covers base vehicle dispatch, driver cost, and loading/unloading operations within the included kilometers. The engine uses this as the starting point at Step 6. Number(8,2) is used instead of Currency because Custom Metadata Types do not support the native Currency field type.</description>
    <inlineHelpText>Base trip price including the first included kilometers. Expressed in the currency defined in Currency Code.</inlineHelpText>
    <label>Base Price</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>