force-app/main/default/objects/Transport_Rate__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO 3166-1 alpha-2 country code. The engine filters rate records by matching this field against Trip__c.Country_Code__c. Each country maintains its own pricing grid.</description>
    <inlineHelpText>ISO country code (e.g., FR, DE, UK). Rates are country-specific.</inlineHelpText>
    <label>Country Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>