force-app/main/default/objects/Transport_Rate__mdt/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>ISO 4217 currency code for all monetary fields in this record (Base_Price, Price_Per_Extra_Km, Minimum_Price). Used at Step 10 for currency conversion if different from the Opportunity&apos;s currency. Resolution logic: if this field is populated → use it; otherwise fall back to Country_Currency__mdt.</description>
    <inlineHelpText>ISO currency code (e.g., EUR, GBP, DKK). Specifies the currency of all prices in this record.</inlineHelpText>
    <label>Currency Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>