force-app/main/default/objects/Transport_Rate__mdt/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>Date until which this rate record remains effective (inclusive). The engine filters: Effective_End_Date__c ≥ Trip__c.Trip_Date__c OR field is blank (meaning no expiry). Blank = unlimited validity.</description>
    <inlineHelpText>End date of this rate&apos;s validity period (inclusive). Leave blank for no expiration. Example: 2025-12-31.</inlineHelpText>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>