force-app/main/default/objects/Transport_Rate__mdt/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>Date from which this rate record becomes effective (inclusive). The engine filters: Effective_Start_Date__c ≤ Trip__c.Trip_Date__c. Enables annual or seasonal rate versioning without code changes.</description>
    <inlineHelpText>Start date of this rate&apos;s validity period (inclusive). Example: 2025-01-01.</inlineHelpText>
    <label>Effective Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>