force-app/main/default/objects/Transport_Rate__mdt/fields/Included_Km__c.field-meta.xml
<CustomField>
    <fullName>Included_Km__c</fullName>
    <description>Number of kilometers included in the base price. Beyond this threshold, each additional kilometer is charged at Price_Per_Extra_Km__c. The engine calculates: extra_km = max(0, distance - Included_Km__c).</description>
    <inlineHelpText>Number of km included in the base price. Additional km beyond this are charged per km.</inlineHelpText>
    <label>Included Km</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>