force-app/main/default/objects/Transport_Rate__mdt/fields/Minimum_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price__c</fullName>
    <description>Absolute price floor. After computing the base price (and optionally after applying the return discount), the engine enforces: price = max(price, Minimum_Price__c). Ensures profitability on short-distance or return trips.</description>
    <inlineHelpText>Minimum price floor. The calculated price will never go below this amount.</inlineHelpText>
    <label>Minimum Price</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>