force-app/main/default/objects/Transport_Rate__mdt/fields/Price_Per_Extra_Km__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Extra_Km__c</fullName>
    <description>Price per additional kilometer beyond Included_Km__c. Expressed in the same currency as Base_Price__c. The engine formula: total = Base_Price + (extra_km × Price_Per_Extra_Km).</description>
    <inlineHelpText>Cost per additional km beyond the included distance. Same currency as Base Price.</inlineHelpText>
    <label>Price Per Extra Km</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>