force-app/main/default/objects/Transport_Rate__mdt/fields/Return_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Return_Discount_Pct__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percentage discount applied to Pickup (return) trips at Step 7. The engine formula: if Direction = Pickup → price = price × (1 - Return_Discount_Pct / 100). Applied BEFORE supplements. Value 20 means 20% discount.</description>
    <inlineHelpText>Discount % for return trips (Pickup direction). Enter 20 for 20%. Applied before supplements.</inlineHelpText>
    <label>Return Discount Pct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>