force-app/main/default/objects/Transport_Rate__mdt/fields/Truck_Code__c.field-meta.xml
<CustomField>
    <fullName>Truck_Code__c</fullName>
    <description>Truck category code that must match a Truck_Type__mdt.Truck_Code__c value. Together with Zone_Code and Country_Code, forms the unique pricing key.</description>
    <inlineHelpText>Truck type code (e.g., VL, PL12). Must correspond to a Truck Type record.</inlineHelpText>
    <label>Truck Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>