force-app/main/default/objects/Transport_Rate__mdt/fields/Zone_Code__c.field-meta.xml
<CustomField>
    <fullName>Zone_Code__c</fullName>
    <description>Zone code that must match a Transport_Zone__mdt.Zone_Code__c value. Establishes the link between the distance-based zone and its pricing.</description>
    <inlineHelpText>Zone code (e.g., A, B, C). Must correspond to a Transport Zone record.</inlineHelpText>
    <label>Zone Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>